# hugo-frontmatter-mcp

./: Dockerfile  Makefile  README.md  hugo_frontmatter_mcp.py  pyproject.toml  smithery.yaml
tests/: test_frontmatter_api.py
